# ARGUS

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: main.py
configs/: drain3.ini  inference.yaml  model.yaml  training.yaml
docker/: Dockerfile.api  Dockerfile.consumer
docker/logstash/: argus.conf
docs/: CLOUD_QUICKSTART.md
requirements/: base.txt
scripts/: build_sessions.py  build_vocab_and_tokenize.py  create_es_index.py  create_kafka_topics.py  health_check.py
src/: config.py
src/api/: __init__.py  main.py
src/inference/: __init__.py  kafka_consumer.py
src/parsing/: drain3_parser.py  log_tokenizer.py  session_builder.py  vocab_builder.py
src/utils/: config.py
tests/unit/: test_build_sessions.py  test_build_vocab_and_tokenize.py  test_drain3_parser.py  test_session_builder.py  test_tokenizer.py  test_vocab_builder.py
